--- a/requirements.txt
+++ b/requirements.txt
@@ -2,34 +2,40 @@
 # Core dependencies required by the framework
 
 # Web Framework
-sanic>=23.0.0
+sanic>=23.12.0
 sanic-ext>=23.0.0
 
 # Database ORM & Migrations
-tortoise-orm>=0.19.0
-aerich>=0.7.0
-asyncpg>=0.27.0  # PostgreSQL adapter
+tortoise-orm>=0.20.0
+tortoise-orm[aiosqlite]==0.25.1  # Latest
+aerich==0.9.1  # Latest
+asyncpg>=0.29.0  # PostgreSQL
 aiomysql>=0.1.0  # MySQL adapter (optional)
+aiosqlite>=0.21.0 # SQLite
+tomlkit>=0.13.0  # Required by aerich
 
 # HTTP Client
-aiohttp>=3.8.0
-requests>=2.28.0
-certifi>=2022.0.0
+aiohttp>=3.12.0
+requests>=2.32.0
+certifi>=2025.8.0  # CRITICAL SSL cert update
 
 # Async Redis (for cache and websocket support)
-redis>=4.5.0
+redis>=6.4.0
+
+aiofiles>=23.2.1
+aioredis>=2.0.1
 
 # Security & Crypto
-bcrypt>=4.0.0
-PyJWT>=2.6.0
-cryptography>=40.0.0
-itsdangerous>=2.1.0
+bcrypt>=5.0.0  # Updated to latest
+pyjwt>=2.8.0
+cryptography>=46.0.0  # CRITICAL security update
+itsdangerous>=2.2.0
 
 # Environment & Configuration
-python-dotenv>=0.21.0
+python-dotenv>=1.0.0
 
-# Template Engine (Blade)
-# Note: Using custom blade implementation in framework/support/blade_engine.py
+# Template Engine
+git+https://github.com/packalyst/swiftblade.git
 
 # Utilities
-tomlkit>=0.13.0  # For aerich configuration
+pytz>=2025.2
